--- a/shikuwasa-hundred.html
+++ b/shikuwasa-hundred.html
@@ -10,7 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <title>Document</title>
 </head>
-<body style="width: 80%; margin: 0 auto;">
+<body style="width: 800px; margin: 0 auto;">
         <div class="fbox">
             <div class="slider-area">
                 
